QUEUE-24 jmh helpers